# pl-monitor

./: LICENSE  Pipfile  README.md  setup.cfg  setup.py
kedro_monitor/frameworks/cli/: cli.py
kedro_monitor/frameworks/context/: context.py
kedro_monitor/mlflow/: decorator.py  hooks.py  node.py
kedro_monitor/templates/mlflow/: cookiecutter.json
kedro_monitor/templates/mlflow/{{ cookiecutter.dir_name }}/: mlflow.yml
