[metadata]
name = kedro_monitor
version = attr:kedro_monitor.__version__
url = https://github.com/takesei/pl-monitor
author = take.sei
author_email = sei06k14@gmail.com
license = MIT
description = Monitoring tools for Kedro pipeline
description-file = file: README.md

[options]
packages = find:
python_requires= <=3.8
